monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4098/A4098Super.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4098;

grammar A4098Super {

  Foo;

}
